# sensors_sensor

./: OAT.xml  README.md  bundle.json  sensor.gni
.github/workflows/: sync-upstream.yml
frameworks/capi/: BUILD.gn  sensor_capi.cpp
frameworks/js/napi/: BUILD.gn
frameworks/js/napi/include/: async_callback_info.h  sensor_js.h  sensor_napi_error.h  sensor_napi_utils.h
frameworks/js/napi/src/: sensor_js.cpp  sensor_napi_error.cpp  sensor_napi_utils.cpp
frameworks/kits/c/: BUILD.gn  sensor_capi.h  sensor_capi_base.h
frameworks/native/: BUILD.gn
frameworks/native/sensor/: BUILD.gn
frameworks/native/sensor/include/: client_info_file_descriptor_listener.h  i_sensor_callback.h  i_sensor_service.h  i_sensor_status_callback.h  my_event_handler.h  sensor_agent_proxy.h  sensor_data_channel.h  sensor_event_listener.h  sensor_file_descriptor_listener.h  sensor_service_client.h  sensor_service_proxy.h  sensors_ipc_interface_code.h
frameworks/native/sensor/src/: client_info_file_descriptor_listener.cpp  fd_listener.cpp  my_event_handler.cpp  my_file_descriptor_listener.cpp  sensor_agent_proxy.cpp  sensor_callback_stub.cpp  sensor_data_channel.cpp  sensor_event_handler.cpp  sensor_event_listener.cpp  sensor_file_descriptor_listener.cpp  sensor_service_client.cpp  sensor_service_proxy.cpp  sensor_status_callback_stub.cpp
frameworks/native/src/: native_sensor.cpp  sensor_agent.cpp  sensor_agent_proxy.cpp  sensor_service_client.cpp
interfaces/capi/: BUILD.gn  sensor_capi.cpp
interfaces/capi/test/unittest/: BUILD.gn  sensor_capi_test.cpp
interfaces/inner_api/: sensor_agent.h  sensor_agent_type.h
interfaces/kits/c/: BUILD.gn  libsensor_capi.ndk.json  oh_sensor_type.h  sensor_capi.h  sensor_capi_base.h
interfaces/native/: BUILD.gn
interfaces/native/include/: geomagnetic_field.h  i_sensor_status_callback.h  sensor_agent.h  sensor_agent_type.h  sensor_algorithm.h  sensor_callback_stub.h  sensor_status_callback_stub.h
interfaces/native/src/: geomagnetic_field.cpp  sensor_agent.cpp  sensor_algorithm.cpp  sensor_capi.cpp
interfaces/native/test/: BUILD.gn
interfaces/native/test/unittest/: inject_sensor_test.cpp  sensor_agent_test.cpp  sensor_algorithm_test.cpp  sensor_power_test.cpp  sensor_power_test.h  sensor_status_callback.cpp  sensor_status_callback.h
interfaces/plugin/: BUILD.gn
interfaces/plugin/include/: sensor_js.h  sensor_napi_utils.h  sensor_system_js.h
interfaces/plugin/src/: sensor_js.cpp  sensor_napi_utils.cpp
interfaces/plugin/test/unittest/: BUILD.gn  ExampleJsunit.test.js
interfaces/plugin/test/unittest/pedometer_detection/: BUILD.gn  ExampleJsunit.test.js  config.json
interfaces/plugin/test/unittest/sensor/: ExampleJsunit.test.js
interfaces/plugin/test/unittest/subsensor/: BUILD.gn  ExampleJsunit.test.js
rust/utils/socket_ipc_rust_ffi/: BUILD.gn
rust/utils/socket_ipc_rust_ffi/src/: epoll_manager.rs  lib.rs  net_packet.rs  stream_buffer.rs  stream_session.rs
sa_profile/: 3601.xml
services/: BUILD.gn
services/hdi_connection/adapter/src/: compatible_connection.cpp  hdi_connection.cpp  sensor_event_callback.cpp
services/hdi_connection/hardware/src/: hdi_service_impl.cpp
services/hdi_connection/interface/src/: sensor_hdi_connection.cpp
services/sensor/: BUILD.gn
services/sensor/include/: client_info.h  fifo_cache_data.h  sensor_callback_proxy.h  sensor_data_processer.h  sensor_manager.h  sensor_service.h  sensor_service_stub.h  sensor_status_callback_proxy.h  sensor_suspend_policy.h  stream_server.h
services/sensor/src/: client_info.cpp  sensor_callback_proxy.cpp  sensor_data_processer.cpp  sensor_dump.cpp  sensor_manager.cpp  sensor_power_policy.cpp  sensor_service.cpp  sensor_service_stub.cpp  sensor_status_callback_proxy.cpp  sensor_suspend_policy.cpp  stream_server.cpp
services/sensor/test/fuzztest/: BUILD.gn
services/src/: sensor_data_processer.cpp  sensor_dump.cpp  sensor_manager.cpp  sensor_service.cpp
test/fuzztest/interfaces/getactivesensorinfos_fuzzer/: getactivesensorinfos_fuzzer.cpp
test/fuzztest/interfaces/register_fuzzer/: register_fuzzer.cpp
test/fuzztest/interfaces/resumesensors_fuzzer/: resumesensors_fuzzer.cpp
test/fuzztest/interfaces/suspendsensors_fuzzer/: suspendsensors_fuzzer.cpp
test/fuzztest/interfaces/unregister_fuzzer/: unregister_fuzzer.cpp
test/unittest/interfaces/capi/: BUILD.gn  sensor_capi_test.cpp
utils/: BUILD.gn
utils/common/: BUILD.gn
utils/common/include/: print_sensor_data.h  sensor_errors.h  sensor_utils.h  sensors_errors.h
utils/common/src/: permission_util.cpp  print_sensor_data.cpp
utils/include/: app_sensor.h  sensor_basic_data_channel.h  sensor_utils.h  sensors_errors.h
utils/ipc/: BUILD.gn
utils/ipc/include/: proto.h  stream_buffer.h  stream_session.h  stream_socket.h
utils/ipc/src/: stream_buffer.cpp  stream_session.cpp  stream_socket.cpp
utils/src/: app_sensor.cpp  permission_util.cpp  sensor.cpp  sensor_basic_data_channel.cpp
vibration_convert/core/: BUILD.gn
vibration_convert/core/algorithm/conversion/include/: conversion_fft.h  fft.h
vibration_convert/core/algorithm/conversion/src/: conversion_fft.cpp  conversion_filter.cpp  conversion_mfcc.cpp  fft.cpp
vibration_convert/core/algorithm/frequency_estimation/src/: frequency_estimation.cpp
vibration_convert/core/algorithm/intensity_processor/src/: intensity_processor.cpp
vibration_convert/core/algorithm/onset/include/: onset.h
vibration_convert/core/algorithm/onset/src/: onset.cpp
vibration_convert/core/algorithm/peak_finder/include/: peak_finder.h
vibration_convert/core/algorithm/peak_finder/src/: peak_finder.cpp
vibration_convert/core/native/include/: vibration_convert_core.h
vibration_convert/core/native/src/: audio_parsing.cpp  generate_vibration_json_file.cpp  vibration_convert_core.cpp
vibration_convert/core/native/test/: BUILD.gn
vibration_convert/core/native/test/unittest/: generate_json_test.cpp
vibration_convert/core/utils/include/: audio_utils.h  utils.h
vibration_convert/core/utils/src/: audio_utils.cpp  utils.cpp
(+51 files in other folders)
