# Copyright (c) 2021-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("./../../sensor.gni")

config("sensor_private_config") {
  include_dirs = [
    "$SUBSYSTEM_DIR/frameworks/native/include",
    "$SUBSYSTEM_DIR/interfaces/native/inner_api",
    "$SUBSYSTEM_DIR/frameworks/kits/c",
    "$SUBSYSTEM_DIR/utils/ipc/include",
    "$SUBSYSTEM_DIR/utils/common/include",
  ]
}

config("sensor_public_config") {
  include_dirs = [
    "include",
    "$SUBSYSTEM_DIR/frameworks/native/include",
    "$SUBSYSTEM_DIR/frameworks/native/inner_api",
    "$SUBSYSTEM_DIR/interfaces/kits/c",
    "$SUBSYSTEM_DIR/utils/ipc/include",
  ]
}

ohos_shared_library("sensor_capi_ndk") {
  sources = [ "sensor_capi.cpp" ]

  defines = [ "API_EXPORT=__attribute__((visibility (\"default\")))" ]

  configs = [ ":sensor_private_config" ]
  public_configs = [ ":sensor_public_config" ]

  deps = [
    "$SUBSYSTEM_DIR/frameworks/native:libsensor_native",
    "$SUBSYSTEM_DIR/frameworks/native:libsensor_ndk",
    "$SUBSYSTEM_DIR/frameworks/native:sensor_interface_native",
    "$SUBSYSTEM_DIR/utils/ipc:libsensor_ipc",
  ]

  external_deps = [
    "c_utils:utils",
    "eventhandler:libeventhandler",
    "hilog:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
  ]

  relative_install_dir = "ndk"
  part_name = "sensor"
  subsystem_name = "sensors"
}

group("sensor_capi_target") {
  deps = [ ":sensor_capi_ndk" ]
}
