# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")

module_output_path = "sensor/interfaces"

ohos_js_unittest("SensorJsTest") {
  module_out_path = module_output_path
  hap_profile = "./src/main/config.json"
  deps = [
    ":SensorJsTest_js_assets",
    ":SensorJsTest_resources",
  ]

  certificate_profile = "//test/developertest/signature/openharmony_sx.p7b"
  hap_name = "SensorJsTest"
}
ohos_js_assets("SensorJsTest_js_assets") {
  source_dir = "./src/main/js/default"
}
ohos_resources("SensorJsTest_resources") {
  sources = [ "./src/main/resources" ]
  hap_profile = "./src/main/config.json"
}

group("unittest") {
  testonly = true
  deps = [ ":SensorJsTest" ]
}
