# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/sensors/sensor/sensor.gni")
import("//build/test.gni")

module_output_path = "sensors/sensor/vibration_convert/interfaces"

###########################GenerateJsonFileTest###########################
ohos_unittest("GenerateJsonFileTest") {
  module_out_path = module_output_path

  sources = [ "unittest/generate_json_test.cpp" ]

  include_dirs = [
    "$SUBSYSTEM_DIR/utils/include",
    "$SUBSYSTEM_DIR/vibration_convert/interfaces/native/include",
    "$SUBSYSTEM_DIR/vibration_convert/core/native/include",
    "$SUBSYSTEM_DIR/vibration_convert/core/algorithm/conversion/include",
    "$SUBSYSTEM_DIR/vibration_convert/core/algorithm/frequency_estimation/include",
    "$SUBSYSTEM_DIR/vibration_convert/core/algorithm/intensity_processor/include",
    "$SUBSYSTEM_DIR/vibration_convert/core/algorithm/onset/include",
    "$SUBSYSTEM_DIR/vibration_convert/core/algorithm/peak_finder/include",
    "$SUBSYSTEM_DIR/utils/common/include",
    "$SUBSYSTEM_DIR/vibration_convert/core/utils/include",
  ]

  deps = [
    "$SUBSYSTEM_DIR/utils:sensor_utils_target",
    "$SUBSYSTEM_DIR/utils/common:libsensor_utils",
    "$SUBSYSTEM_DIR/vibration_convert/core:vibrationconvert_native",
    "//third_party/googletest:gmock_main",
    "//third_party/googletest:gtest_main",
  ]
  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libnativetoken",
    "access_token:libtoken_setproc",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
  ]
}

###########################end###########################
group("unittest") {
  testonly = true
  deps = [ ":GenerateJsonFileTest" ]
}
